--- a/WK1/WiU1508_Ortiz-Alvarez_Fabiola/WiU Landing Page/index.html
+++ b/WK1/WiU1508_Ortiz-Alvarez_Fabiola/WiU Landing Page/index.html
@@ -42,8 +42,8 @@
        </thead>
        <tbody>
           <tr class="odd">
-             <td><a href="#">Link to test 1 here</a></td>
-             <td><a href="">Link to test results 1</a></td>
+             <td><a href="https://usabilityhub.com/do/452ef238b8ce/cb1c">Link to test 1 here</a></td>
+             <td><a href="https://usabilityhub.com/tests/452ef238b8ce/results/ae5e0018ef99">Link to test results 1</a></td>
           </tr>
           <tr>
              <td><a href="#">Link to test 2 here</a></td>
