--- a/WK1/WiU1508_Ortiz-Alvarez_Landing_Page/Landing_Page/index.html
+++ b/WK1/WiU1508_Ortiz-Alvarez_Landing_Page/Landing_Page/index.html
@@ -46,8 +46,8 @@
              <td><a href="https://usabilityhub.com/tests/452ef238b8ce/results/ae5e0018ef99">Link to test results 1</a></td>
           </tr>
           <tr>
-             <td><a href="https://usabilityhub.com/do/a3bf41262c80/150a">Link to test 2 here</a></td>
-             <td><a href="https://usabilityhub.com/tests/a3bf41262c80/results/795488be504d">Link to test results 2</a></td>
+             <td><a href="#">Link to test 2 here</a></td>
+             <td><a href="">Link to test results 2</a></td>
           </tr>
           <tr class="odd">
              <td><a href="#">Link to test 3 here</a></td>
