--- a/WK1/Landing_Page/index.html
+++ b/WK1/Landing_Page/index.html
@@ -50,8 +50,8 @@
              <td><a href="https://usabilityhub.com/tests/a3bf41262c80/results/795488be504d">Link to test results 2</a></td>
           </tr>
           <tr class="odd">
-             <td><a href="#">Link to test 3 here</a></td>
-             <td><a href="">Link to test results 3</a></td>
+             <td><a href="https://usabilityhub.com/do/f578dded7850/94af">Link to test 3 here</a></td>
+             <td><a href="https://usabilityhub.com/tests/f578dded7850/results/88393b8b3e53">Link to test results 3</a></td>
           </tr>
           <tr>
              <td><a href="#">Link to test 4 here</a></td>
