--- a/WK1/Landing_Page/index.html
+++ b/WK1/Landing_Page/index.html
@@ -54,8 +54,8 @@
              <td><a href="https://usabilityhub.com/tests/f578dded7850/results/88393b8b3e53">Link to test results 3</a></td>
           </tr>
           <tr>
-             <td><a href="#">Link to test 4 here</a></td>
-             <td><a href="#">Link to test results 4</a></td>
+             <td><a href="https://usabilityhub.com/do/ddad5e7be28d/23ab">Link to test 4 here</a></td>
+             <td><a href="https://usabilityhub.com/tests/ddad5e7be28d/results/a93e0c0e98ff">Link to test results 4</a></td>
           </tr>
           <tr class="odd">
              <td><a href="#">Link to test 5 here</a></td>
