--- a/WK1/Landing_Page/index.html
+++ b/WK1/Landing_Page/index.html
@@ -58,8 +58,8 @@
              <td><a href="https://usabilityhub.com/tests/ddad5e7be28d/results/a93e0c0e98ff">Link to test results 4</a></td>
           </tr>
           <tr class="odd">
-             <td><a href="#">Link to test 5 here</a></td>
-             <td><a href="#">Link to test results 5</a></td>
+             <td><a href="https://usabilityhub.com/do/d06af56ec575/6106">Link to test 5 here</a></td>
+             <td><a href="https://usabilityhub.com/tests/d06af56ec575/results/ced0d79fe469">Link to test results 5</a></td>
           </tr>
           <!-- start link -->
           <tr>
